syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "LibraryManagement.Protobuf";

service Book {
	rpc GetBook (GetBookRequest) returns (GetBookResponse);
	rpc GetAllBooks (google.protobuf.Empty) returns (GetAllBooksResponse);
	rpc AddBook (AddBookRequest) returns (AddBookResponse);
	rpc RemoveBook (RemoveBookRequest) returns (RemoveBookResponse);
	rpc GetSuggestedBooks (SuggestedBooksRequest) returns(GetAllSuggestedBooksResponse);

}
message SuggestedBooksRequest{
	int32 Id = 1;
}
message SuggestedBooksResponse{
	string name = 1;
	int32 authorId = 2;
	int32 year =3;
	float price =4;
	string category=5;
}
message GetAllSuggestedBooksResponse {
	repeated SuggestedBooksResponse get_Suggested_Book_Response = 1;
}

message AddBookRequest {
	string name = 2;
	int32 stock =3;
	string category=4;
	int32 year=5;
	int32 author_Id = 6;
}

message AddBookResponse {
	int32 Id = 1;
}

message GetBookRequest {
	int32 Id = 1;
}

message GetBookResponse {
	int32 Id = 1;
	string name = 2;
	int32 stock =3;
	string category=4;
	int32 price =5;
	int32 year=6;
	int32 author_Id = 7;
}

message GetAllBooksResponse {
    repeated GetBookResponse get_Book_Response = 1;
}

message RemoveBookRequest {
    int32 Id = 1;
}

message RemoveBookResponse {
    bool deleted = 1;
}